src/style.css
@import url('https://fonts.googleapis.com/css?family=PT+Sans&display=swap');

:root {
    --white-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.2);

    /* FONTS */
    --title-font: Shadow, Georgia, serif;
    --text-font: 'PT Sans', Helvetica, sans-serif;

    --smaller-font-size: 0.9rem;

    /* MENU */
    --menu-mark-thickness: 4px;

    /* SIZE */
    --mobile-width: 31.25em;

    /* CONTENT */
    --content-width: 60%;
    --content-margin: 0;
    --content-wide-width: 100%;
    --content-wide-margin: var(--size-l) var(--size-xl);

    --embed-video-ratio: 56.25%;

    /* FONTS */
    --font-size-default: 14pt;
    --font-size-accent: 24pt;
    --font-size-second: 12pt;

    --font-size-h1: 5rem;
    --font-size-h2: 3rem;
    --font-size-h3: 1.5rem;

    /* COLOR */
    --dark-color: hsl(0, 0%, 20%);
    --color-shadow: rgba(27, 51, 88, 0.15);
    --darker-color: hsl(0, 0%, 10%);

    /* TEXT COLOR */
    --color-text: #202020;
    --color-text-second: #9090a0;
    --color-text-opposite: #f0f0f0;

    --color-link: hsl(0, 0%, 80%);
    --color-link-opposite: hsl(0, 0%, 40%);

    --color-back-main: white;
    --color-back-opposite: var(--darker-color);

    /* SIZE */
    --size-xs: 0.35em;
    --size-s: 0.75em;
    --size-m: 1em;
    --size-l: 2em;
    --size-xl: 3em;

    /* EFFECTS */
    --radius: 16px;
    --shadow: 0 0 8px var(--color-shadow);
    --shadow-active: 0 4px 16px var(--color-shadow);

    /* MARGINS */
    --single-margin: 1em;

    /* OTHER */
    --block-border-radius: 3px;

    /* ARTICLE */
    --article-line-height: 1.5em;

    /* KAZIMIR */
    --kazimir-caption-margin: 0px;
    --kazimir-radius: 10px;
    --kazimir-image-increase: 50px;
}

* {
    margin: 0;
    padding: 0;
}

html,
body {
    height: 100%;
}

body {
    min-width: 320px;

    color: var(--color-text);
    background-color: var(--color-back-main);
}

footer {
    padding: var(--single-margin);
    color: var(--color-text-opposite);
    background-color: var(--color-back-opposite);
    font-size: var(--font-size-second);
}

h1 {
    text-align: center;
    font-size: var(--font-size-h1);

    hyphens: none;
}

h2 {
    margin: var(--single-margin) 0;
    font-size: var(--font-size-h2);

    hyphens: none;
}

h3 {
    margin: var(--single-margin) 0;

    font-size: var(--font-size-h3);

    hyphens: none;
}

h1,
h2 {
    font-family: var(--title-font);
}

a {
    color: var(--color-text);

    text-decoration: none;
    border-bottom: 1px solid var(--color-link);
}

a:hover {
    border-bottom: 2px solid var(--color-text);
}

a:active {
    border-width: 2px;
}

a.invisible {
    border-bottom: none;
}

.opposite a {
    color: var(--color-text-opposite);
    border-bottom-color: var(--color-link-opposite);
}

.opposite a:hover {
    border-bottom-color: var(--color-text-opposite);
}

.noscroll {
    overflow: hidden;
}

@media (max-width: 31.25em) {
    :root {
        --font-size-default: 14pt;
        --font-size-accent: 16pt;
        --font-size-h1: 1.5rem;
        --font-size-h2: 1.5rem;
        --font-size-h3: 1.25rem;

        --content-width: 100%;
        --content-margin: var(--size-m);
        --content-wide-margin: var(--size-m) var(--size-m);

        --kazimir-image-increase: 0px;
    }
}

